# Quadruped-PyMPC-Luna

./: .gitignore  .gitmodules  SIMULATION_STATS_README.md  pyproject.toml  test.py
.tmux/: README.md  session.sh
.tmuxinator/: USAGE.md  quadruped_dev.yml
installation/mamba/integrated_gpu/: mamba_environment_ros2_kilted.yml
installation/mamba/nvidia_cuda/: mamba_environment_ros2.yml  test.txt
quadruped_pympc/: config.py
ros2/: run_controller.py  run_simulator.py  visualize_robot_from_joint_states.py  visualize_state.py
ros2/msgs_ws/src/dls2_msgs/: CMakeLists.txt
ros2/msgs_ws/src/dls2_msgs/msg/: TrajectoryGeneratorMsg.msg
ros2/msgs_ws/src/message_converter/: CMakeLists.txt  message_converter_plugins.xml  package.xml
ros2/msgs_ws/src/message_converter/config/: base_state_converter_plugin.yaml  blind_state_converter_plugin.yaml  contact_plugin.yaml
ros2/msgs_ws/src/message_converter/include/message_converter/: converter_base.hpp  message_converter.hpp  message_converter_node.hpp
ros2/msgs_ws/src/message_converter/launch/: message_converter.launch.py
ros2/msgs_ws/src/message_converter/src/: message_converter_node.cpp
ros2/msgs_ws/src/message_converter/src/plugins/: base_state_converter_plugin.cpp  blind_state_converter_plugin.cpp
ros2/msgs_ws/src/state_estimator_msgs/: package.xml
ros2/rosbag2_2025_11_04-17_38_05/: metadata.yaml  rosbag2_2025_11_04-17_38_05_0.mcap
rosbags/luna_sim_external/: metadata.yaml
rosbags/luna_sim_internal/: metadata.yaml
rosbags/rosbag2_2025_10_30-16_27_45/: metadata.yaml  rosbag2_2025_10_30-16_27_45_0.mcap
rosbags/rosbag2_2025_11_07-14_25_56/: metadata.yaml  rosbag2_2025_11_07-14_25_56_0.mcap
rosbags/rosbag2_2025_11_11-11_11_26/: metadata.yaml
rosbags/rosbag2_2025_11_11-16_10_21/: metadata.yaml
rosbags/rosbag2_2025_11_11-22_16_23/: metadata.yaml
simulation/: simulation.py
