<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>message_converter</name>
  <version>0.0.0</version>
  <description>This package contains logic that uses plugins to convert and aggregate plugin topics from the muse_ws state estimator to the quadruped pympc data</description>
  <maintainer email="joecarverde@gmail.com">Jonas LEwandrowski</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>pluginlib</depend>
  <depend>state_estimator_msgs</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <message_converter plugin="${prefix}/message_converter_plugins.xml"/>
  </export>
</package>
